<?xml version="1.0"?>
<package format="2">
  <name>evo_rd_joy</name>
  <version>1.0.0</version>
  <description>The evo_rd_joy package</description>

  <maintainer email="info@evocortex.org">WHA</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <exec_depend>joy</exec_depend>

</package>
